[package]
name = "tolerance"
description = "Math representation of the physically needed permissible deviation of measures."
repository = "https://github.com/NORICS-net/tolerance"
version = "1.1.2"
authors = ["Micha Glave <coding@migmedia.de>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[features]
serde = ["dep:serde"]

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1"
serde_test = { version = "1.0" }
